CICD trigger test

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pure Chaos</title>
+    <title>EXTREME CHAOS</title>
     <link rel="stylesheet" href="chaos.css" />
+    <meta
+      name="description"
+      content="Experience pure digital chaos with random images, animations, and effects. Warning: contains flashing lights and may trigger seizures in people with photosensitive epilepsy."
+    />
   </head>
   <body>
     <div id="chaos-container">
       <h1 id="chaotic-title">CHAOS</h1>
       <h1 id="chaotic-title">CHAOS</h1>
       <h1 id="chaotic-title">CHAOS</h1>
-      <h1 id="chaotic-title">CHAOS</h1>
-      <h1 id="chaotic-title">CHAOS</h1>
-      <h1 id="chaotic-title">EPILEPSY WARNING</h1>
-      <h1 id="chaotic-title">EPILEPSY WARNING</h1>
       <h1 id="chaotic-title">EPILEPSY WARNING</h1>
       <h1 id="chaotic-title">EPILEPSY WARNING</h1>
       <div id="chaos-elements"></div>
       <div id="chaos-buttons">
-        <button id="trigger-chaos">TRIGGER CHAOS</button>
+        <button id="trigger-chaos">INCREASE CHAOS</button>
         <button id="reset-chaos">RESET</button>
       </div>
     </div>
